--- a/Css/navBar.css
+++ b/Css/navBar.css
@@ -23,3 +23,14 @@
 .nav-list-navegation i{
     margin-right: 5px;
 }
+
+input[type="file"] {
+    display: none;
+}
+
+.custom-file-upload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
